tests/typing/faulty_namespace.sy
use _import
start :: fn do
    _import.q + 1.0
end
// error: $BinOp { .. }
